# chipate

./: Cargo.toml  LICENSE  README.md
keymaps/: blinky_wasd.json  standard.json
src/: consts.rs  cpu.rs  display.rs  keymaps.rs  keypad.rs  main.rs  sound.rs
