[package]
name = "chipate"
version = "0.1.0"
authors = ["wxllow"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.5"
sdl2 = { version = "0.36.0", features = ["ttf"] }
